Fixed all spacing errors and added a variable

--- a/src/components/dynamic/error/Error.module.scss
+++ b/src/components/dynamic/error/Error.module.scss
@@ -1,3 +1,3 @@
 .error {
-    background-color: blue;
+    background-color: $color_blue;
 }
